--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,21 +1,19 @@
 body{
-    background-color: #84b8e2;
-    background-image: url("../img/mar.jpeg");
-    background-repeat: no-repeat;
+    background-color: #0f0f0fbd;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #f0f0f0;
 }
 
 .header{
     width: 100%;
-    height: 160px;
-    background-color: #5b9ebd;
+    height: 100px;
+    background: linear-gradient(#09218b, #5b9ebd);
     border: solid 2px #1c4272;
     border-radius: 30px;
     margin-bottom: auto;
     justify-content:center;
     color: rgb(255, 255, 255);
     font-size:larger;
-    flex-wrap: wrap;
     display: flex;
 }
 
@@ -27,7 +25,9 @@ body{
     width: 60%;
     justify-content: center;
     align-content: center;
-    font-size: 4rem;
+    text-align: center;
+    font-size: 40px;
+    color: #0f0f0f;
 }
 
 .headerbuttons{
@@ -90,4 +90,24 @@ body{
 .card-acao:hover{
     background-color: #221e1e;
     color: #c30202;
+}
+
+#botao_home{
+    background-color: #0f0f0f;
+    color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 80%;
+    height: 80%;
+    border-radius: 15px;
+    padding: 30px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.corpo{
+    display: flex;
+    margin: 5%;
+    font-size: small;
 }
